# engram-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
src/: command_line.rs  lib.rs  main.rs  memory.rs  memory_store.rs  server.rs
tests/: compatibility.rs
tests/fixtures/: csharp-memory.json  csharp-reinforced-memory.json
