[package]
name = "engram-mcp"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of the Engram MCP server"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/bob-clawd/engram-mcp"
homepage = "https://github.com/bob-clawd/engram-mcp"

[dependencies]
anyhow = "1.0"
rmcp = { version = "1.5.0", features = ["client", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.0", features = ["fs", "io-std", "macros", "rt-multi-thread", "signal", "sync"] }

[dev-dependencies]
tempfile = "3.23.0"
